# Rust-project

./: README.md
HFT-trading-rust/: Cargo.toml
HFT-trading-rust/src/: main.rs
Rest-api-rust/: Cargo.toml
Rusty-Repo-Doctor/: Cargo.toml
Rusty-Repo-Doctor/src/: main.rs
Secure-file-share-open-source/: Cargo.toml  readme.md
Secure-file-share-open-source/src/: handlers.rs  main.rs  routers.rs
backend-rust/: Cargo.toml
backend-rust/src/: main.rs
blockchain/: Cargo.toml
blockchain-backend/: Cargo.toml
blockchain-backend/src/: main.rs
blockchain-infrastructure/config/tendermint/: config.toml  genesis.json
blockchain-infrastructure/contracts/hello-contract/: Cargo.toml
blockchain-infrastructure/contracts/hello-contract/src/: contracts.rs  lib.rs  message.rs  state.rs
blockchain-infrastructure/script/: start.sh
blockchain/src/: main.rs
coffee-supply-chain-cosmos/: Cargo.toml
coffee-supply-chain-cosmos/src/: main.rs
command-linetool/: Cargo.toml
config-parser-cli-tool/: Cargo.toml
config-parser-cli-tool/src/: main.rs  parser.rs
cross-platform-desktop/: Cargo.toml
cross-platform-desktop/src/: main.rs
crypto-exchange-sdk/: Cargo.toml
crypto-exchange-sdk/src/: lib.rs  main.rs
cryptographic-secret-sharing/: Cargo.toml
cryptographic-secret-sharing/src/: main.rs
custom-sdk/: Cargo.toml
custom-sdk/src/: main.rs
facial-expression-regonition/: Cargo.toml
facial-expression-regonition/src/: main.rs
file_sync/: CArgo.toml
file_sync/src/: main.rs
focused-timer/src/: main.rs
frontend-rust/: Cargo.toml
frontend-rust/src/: main.rs
graph-rust/: main.rs
greeter-cli-tool/: Cargo.toml
greeter-cli-tool/src/: main.rs
guessing_game/src/: main.rs
hello_rainbow/: Cargo.toml
hello_rainbow/src/: color.rs  main.rs
hyper-cache/: Cargo.toml
hyper-cache/src/: main.rs
invoice-generator/: Cargo.toml  readme.md
invoice-generator/src/: main.rs
linear-regression/: Cargo.toml
linear-regression/src/: data.rs  main.rs  model.rs  utils.rs
nft-subscription/src/: main.rs
nlp-pipeline/: Cargo.toml
nlp-pipeline/src/: main.rs
payment-transaction/: Cargo.toml
payment-transaction/src/: main.rs
rate-limitter/: Cargo.toml  readme.md
rate-limitter/src/: main.rs
real-time-microservice/src/: websocket.rs
regex-detector/: readme.md
regex-detector/src/: main.rs
rust projects core/Binary-Search-rust/: main.rs
rust projects core/Rest-api-rust/src/: main.rs
rust projects core/command-linetool/src/: main.rs
rust projects core/data-structure/: fenwick-tree.rs  graph.rs
rust projects core/focused-timer/: Cargo.toml
rust projects core/keystorevalue/src/: main.rs
rust projects core/nft-subscription/: Cargo.toml
rust projects core/random_quote/src/: main.rs
rust projects core/rust-file-organizer/src/: main.rs
rust projects core/rustcli-reverse/: Cargo.toml
rust projects core/stack-in-rust/src/: main.rs
rust projects core/states_parser/: Cargo.toml
rust projects core/states_parser/src/: main.rs  states.json
rust projects core/streaming-data/: Cargo.toml
rust projects core/token-system/src/: main.rs
rust projects core/unique-calculationofstreams/: Cargo.toml
rust projects core/unique-calculationofstreams/src/: main.rs
rust projects core/url-shortener/: Cargo.toml
rust projects core/url-shortener/src/: main.rs
rust projects core/voting_system/contracts/: voting.sol
rust projects core/voting_system/migrations/: deploy_contract.js
rust projects core/voting_system/test/: voting-test.js
rust projects core/web-scraper/: Cargo.toml
rust projects core/words-count/src/: main.rs
rust-all/: main.rs  readme.md
rust-new/: main.rs
rust-real-world-projects/Rusty-Repo-Doctor/: Readme.md
rust-real-world-projects/Rusty-Repo-Doctor/src/: main.rs
rust-real-world-projects/Secure-file-share-open-source/: readme.md
rust-real-world-projects/Secure-file-share-open-source/src/: encryption.rs
rust-real-world-projects/real-time-microservice/: Cargo.toml  readme.md
rust-real-world-projects/real-time-microservice/src/: main.rs  redis-pubsub.rs
rust-real-world-projects/regex-detector/: Cargo.toml
rust-real-world-projects/rust-smartdoc/: Cargo.toml  readme.md
rust-real-world-projects/rusty-collectibles/: Anchor.toml
rust-real-world-projects/rusty-collectibles/migrations/: deploy.ts
rust-real-world-projects/rusty-collectibles/tests/: rust-collectibles.ts
rust-real-world-projects/rusty-trader/: Cargo.toml  readme.md
rust-real-world-projects/task-orchestrator/: Cargo.toml
rust-real-world-projects/text-utils-cli/: Cargo.toml
rust-real-world-projects/text-utils-cli/src/: main.rs
rust-real-world-projects/unique-hash/: Cargo.toml
rust-real-world-projects/voting-system/: Cargo.toml
rust-real-world-projects/voting-system/src/: main.rs
rust-real-world-projects/wapplyzer-tech-finder-extension/extension/: content.js  mainfest.json  popup.html
rust-smartdoc/frontend/: Cargo.toml
rust-smartdoc/frontend/src/: main.rs
rust-smartdoc/src/: main.rs
rustcli-reverse/src/: main.rs
rusty-collectibles/: Cargo.toml
rusty-collectibles/src/: lib.rs
rusty-collectibles/tests/: rust-collectibles.ts
rusty-trader/: readme.md
rusty-trader/src/: main.rs
security-deposit-rust/: Cargo.toml
security-deposit-rust/src/: main.rs
streaming-data/src/: main.rs
task-orchestrator/src/: main.rs
todo-cli/src/: main.rs
token-system/: Cargo.toml
unique-hash/: readme.md
unique-hash/src/: main.rs
url-shortener/src/: db.rs
video-sharing-system/: Cargo.toml  readme.md
video-sharing-system/src/: main.rs  video.rs
wapplyzer-tech-finder-extension/extension/: popup.js
wapplyzer-tech-finder-extension/src/: lib.rs
web-scraper/src/: main.rs
