[package]
name = "basic_rust_web_service"
version = "0.1.0"
edition = "2021"

# Add dependencies for web framework, JSON handling, and logging
[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
