[package]
name = "securefileshare"
version = "0.1.0"
edition = "2021"

# Dependencies for the backend server and encryption
[dependencies]
actix-web = "4"
actix-files = "0.6"
rsa = "0.6.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Dependencies for Yew frontend
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = { version = "0.4", features = ["file", "net"] }

# Dependencies for async communication
reqwest = { version = "0.11", features = ["json", "blocking"] }

[features]
# Enabling the generation of RSA keys on startup
default = ["generate-keys"]

[profile.release]
opt-level = "z" # Minimize the binary size for WebAssembly (optional)
