[package]
name = "coffee_supply_chain"
version = "0.1.0"
edition = "2021"

# Dependencies for the Cosmos SDK and other necessary crates
[dependencies]
cosmos-sdk = "0.10"  # Replace with the correct version of the Cosmos SDK you're using
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"  # For error handling
tokio = { version = "1", features = ["full"] }

# For web server if needed (optional)
warp = "0.3"  # A simple web server framework in Rust
