[package]
name = "rust_wc"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A simple word count tool written in Rust"
license = "MIT"
repository = "https://github.com/your-username/rust-wc"
keywords = ["cli", "word count", "rust", "open-source"]
homepage = "https://github.com/your-username/rust-wc"
readme = "README.md"

[dependencies]
clap = "4.0"  # Command line argument parser
