[package]
name = "config-parser"
version = "1.0.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A Rust CLI tool for parsing, querying, and modifying configuration files in JSON, TOML, and YAML formats."
license = "MIT"
repository = "https://github.com/yourusername/config-parser"

[dependencies]
# Serde for serialization and deserialization
serde = { version = "1.0", features = ["derive"] }

# Format-specific parsing libraries
serde_json = "1.0"
toml = "0.7"
serde_yaml = "0.9"

# Command-line argument parsing
clap = { version = "4.1", features = ["derive"] }

# Regex for key validation
regex = "1.7"

# Optional: Any runtime logging/debugging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
# For integration tests
assert_cmd = "2.0"
