[package]
name = "rust-smartdoc-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.20"              # Frontend framework for WebAssembly
gloo-net = "0.2"          # For making HTTP requests in the frontend
wasm-bindgen-futures = "0.4"  # Async tasks in WebAssembly
serde = { version = "1.0", features = ["derive"] }  # Serialization/Deserialization
serde_json = "1.0"        # JSON handling

[dependencies.gloo]
features = ["default", "timers"]  # Additional utilities for async handling
